--- a/link.html
+++ b/link.html
@@ -1,3 +1,1 @@
-<a herf="https://www.spaghettimonster.org/">
-  空飛ぶスパゲッティ・モンスター教
-</a>
+<a herf="https://www.spaghettimonster.org/">空飛ぶスパゲッティ・モンスター教</a>
